updated html code and styles

--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body{
     background-color: aqua;
+    font-family: 'Inter', sans-serif;
+font-family: 'Rubik', sans-serif;
+display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container{
     margin: 0 auto;
-    width: 80%;
+    margin-top: 50px;
+    width: 75%;
     height: 800px;
 background-color: white;
+font-family: inherit;
 }
 
 
@@ -28,12 +35,62 @@ background-color: white;
     display: grid;
     grid-template-columns: 2fr 1fr; 
     grid-gap: 10px;
+    /* padding-top: 30px; */
    
 }
 .left-content{
     margin: 2px solid red;
+    padding-top: 30px;
+    height: 300px;
+
+}
+.right-content{
+    border: 2px solid green;
+    padding: 30px;
+    margin-top: 30px;
+    background-color: hsl(240, 100%, 5%);
+    height: 400px;
+    width: 82%;
+    
+}
+.right-content h1{
+    color: yellow;
+}
+.right-content h3{
+    color: white;
+    font-size: 200;
+}
+.right-content p,hr{
+    color: gray;
+    font-size: 0.9rem;
+    
 }
 .image img{
-    width: 500px;
-    height: 300px;
+    width: 700px;
+    height: 270px;
+}
+.image-head{
+    border: 2px solid red;
+    width: 200px;
+    font-size: larger;
+}
+.image-head h1{
+    font-size: 2rem;
+    font-weight: bolder;
+}
+.image-desc p{
+    border: 2px solid red;
+    width: 300px;
+    /* padding-left: 190px; */
+    height: 50px;
+    font-size: 15px;
+}
+.image-content{
+    display: flex;
+    /* grid-template-columns: 1fr 1fr;  */
+    flex-direction: row;
+    justify-content: space-between;
+}
+.right-content h1{
+    font-weight: bolder;
 }
